# KlectrRadio

./: .eslintignore  .eslintrc.cjs  .prettierrc  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  bun.lockb  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  ProviderWrapper.tsx  main.spec.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: index.ts
src/components/local_radio/: index.tsx
src/components/music_player/: index.tsx
src/components/navigation/: index.tsx
src/components/popular/: index.tsx
src/components/recommended_radio/: index.tsx
src/hooks/: navigationStores.ts  stationStores.ts  storageStores.ts  useNavigator.ts
src/pages/: Add.tsx  Main.tsx  Player.tsx
src/providers/: StationsProvider.tsx  StorageProvider.tsx
